--- a/src/view/Blog/Blog.css
+++ b/src/view/Blog/Blog.css
@@ -1,12 +1,65 @@
-.blog-page{
+.blog-page-header{
+    width: 80%;
+    border: 5px solid green;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+}
+.blog-card {
+    width: 320px;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.blog-image-container {
     width: 100%;
+    height: 100%;
+    position: relative;
 }
-.blog-container{
-   text-align: center;
+
+.blog-image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-.para{
+
+.blog-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-align: justify;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+    width: 80%; 
+}
+
+.blog-content h2 {
     margin: 0;
-    padding: 0;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.blog-content p {
+    margin: 10px 0;
+    font-size: 16px;
+}
+
+.read-more-btn {
+    padding: 10px 20px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+}
+
+.read-more-btn:hover {
+    background-color: rgba(255, 255, 255, 0.9);
 }
 .main-component-cards{
     width: 100%;
