--- a/src/view/Blog/Blog.css
+++ b/src/view/Blog/Blog.css
@@ -4,10 +4,11 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .blog-card {
     width: 320px;
-    height: 350px;
+    height: 320px;
     position: relative;
     overflow: hidden;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -60,7 +61,8 @@
 .small-blog-cards{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: ;
+    gap: 30px;
     border: 3px solid gray;
 }
 
