--- a/src/components/BlogCards/BlogCard.css
+++ b/src/components/BlogCards/BlogCard.css
@@ -1,9 +1,10 @@
 .blog-card-containers{
   width: 300px;
   background-color: #ffffff;
-  border-radius: 15px;
+  border-radius: 10px;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin: 40px 0px;
 }
 .blog-card-containers:hover{
   transform: translateY(-2px);
