start small cards css

--- a/src/components/BlogCards/SecondBlog/SecondBlog.css
+++ b/src/components/BlogCards/SecondBlog/SecondBlog.css
@@ -9,10 +9,11 @@
 
 }
 .second-blog-title{
-
+    
 }
 .second-blog-details{
-
+   display: block;
+   margin-top: 8px; 
 }
 .second-blog-desc{
       text-align: justify;
