--- a/src/view/App/App.css
+++ b/src/view/App/App.css
@@ -26,13 +26,13 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 1;
+  z-index: 1;.App span{
+    font-size: 120px;
+    color: rgba(255, 255, 0, 0.718);
+  
+  }
 }
-.App span{
-  font-size: 120px;
-  color: rgba(255, 255, 0, 0.718);
 
-}
 
 .why-choose-us-content {
   background-color: #3f594440;
