--- a/src/components/BlogCards/BlogCard.css
+++ b/src/components/BlogCards/BlogCard.css
@@ -1,6 +1,6 @@
 .blog-card-containers{
   width: 300px;
-  background-color: #ffffff;
+  background-color: #253e32; 
   border-radius: 10px;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -17,25 +17,28 @@
 }
 .blog-card-content{
   padding: 12px 0px 30px 20px;
+  
 }
 .blog-card-title{
   margin: 0;
+  color: #ffffff;
   
-  color: #333;
 }
 .blog-card-details{
   display:inline-block;
   margin-top: 10px;
   font-size: 0.9rem;
   color: #888;
+  color: #ffffff;
 }
 .blog-card-desc{
   margin: 0;
   padding: 10px 15px 10px 0px;
          /* top right bottm left */
-  color: #555;
+  
   font-size: 1rem;
   text-align: justify;
+  color: #ffffff;
 }
 .read-more{
   text-decoration: underline;
