--- a/src/view/About-us/about.css
+++ b/src/view/About-us/about.css
@@ -2,100 +2,86 @@
 /* AboutUs.css */
 
 .about-container {
-  padding: 40px;
-  background-color: #f2f8e2;
-  /* Light green for an organic feel */
+  padding: 20px;
+  background-color: #f2f8e2; /* Light green for an organic feel */
   color: #333;
 }
 
 .about-hero {
   text-align: center;
-  background: #8cbf4b;
+  background: #0e2f10;
   padding: 50px;
   border-radius: 10px;
   margin-bottom: 50px;
   position: relative;
   overflow: hidden;
   animation: fadeIn 1.5s ease-in-out;
+  height: 80vh;
 }
 
 .about-title {
   font-size: 3rem;
-  color: #2e7031;
+  color: #fff;
 }
 
 .about-subtitle {
   font-size: 1.5rem;
-  color: #4b8b3d;
-  margin-bottom: 20px;
+  color: #bcbcb5;
+  margin: 20px;
 }
 
 .hero-image {
   width: 100%;
   height: auto;
-  max-height: 500px;
+  max-height: 450px;
   object-fit: cover;
   border-radius: 10px;
-  animation: zoomIn 2s ease-in-out;
-
+  animation: zoomIn 2s ease-in-out; 
 }
 
-.about-card-container {
+.about-process-img{
+  display: block;
+  margin: 0 auto;
+  max-width: 700px;
+  border-radius: 30px ;
+}
+.about-card-container{
   display: flex;
-  justify-content: space-around;
-  margin: 15px;
+  justify-content: center;
+  margin: 10px;
+  flex-wrap: wrap;
 }
 
-.about-content,
-.about-values {
-  margin: 50px 0;
-  margin: 0 20px;
-  max-width: 400px;
+.about-content{
+  margin: 10px;
+  max-width: 350px;
   padding: 15px;
   border-radius: 20px;
   box-shadow: 10px 5px 30px #2e7031;
-  cursor: pointer;
-
+  cursor: pointer; 
 }
 
-.about-content h2,
-.about-values h2 {
+.about-content-image{
+  width:100%;
+  height:200px;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+  display: block;
+  margin: 5px auto;
+}
+
+.about-content h1 {
   font-size: 2rem;
   color: #2e7031;
   text-align: center;
 }
 
 .about-description {
-  font-size: 18px;
+  font-size: 16px;
   color: #333;
   line-height: 1.2;
   margin-bottom: 20px;
   animation: slideUp 1s ease-in-out;
-}
-
-.values-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  list-style-type: none;
-  padding: 0;
-}
-
-.values-item {
-  font-size: 20px;
-  background-color: #e7f1d7;
-  padding: 20px;
-  border-radius: 8px;
-  margin: 10px;
-  width: 35%;
-  text-align: center;
-  transition: transform 0.3s ease;
-  cursor: pointer;
-}
-
-.values-item:hover {
-  transform: scale(1.1);
-  background-color: #c6e377;
 }
 
 /* Animations */
@@ -103,12 +89,10 @@
   from {
     opacity: 0;
   }
-
   to {
     opacity: 1;
   }
 }
-
 @keyframes zoomIn {
   from {
     transform: scale(1.1);
@@ -129,4 +113,185 @@
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+@media screen and (max-width:336px) {
+  .about-container {
+    padding: 8px;
+  }
+  
+  .about-hero {
+    margin-bottom: 10px;
+    height: 120px;
+  }
+  
+  .about-title {
+    font-size: 18px;
+  }
+  
+  .about-subtitle {
+    font-size: 7px;
+    margin: 10px;
+  }
+  
+  .hero-image {
+    width: 100%;
+    max-height: 450px;
+  }
+  
+  .about-process-img{
+    max-width: 200px;
+    border-radius: 20px ;
+  }
+  
+  .about-content-image{
+    width:100%;
+    height:100px;
+  }
+  
+  .about-content h1 {
+    font-size: 12px;
+  }
+  
+  .about-description {
+    font-size: 8px;
+  }
+  
+}
+
+@media screen and (min-width:336.5px)and (max-width:450px) {
+  .about-container {
+    padding: 8px;
+  }
+  
+  .about-hero {
+    margin-bottom: 10px;
+    height: 170px;
+  }
+  
+  .about-title {
+    font-size: 22px;
+  }
+  
+  .about-subtitle {
+    font-size: 14px;
+    margin: 10px;
+  }
+  
+  .hero-image {
+    width: 100%;
+    max-height: 450px;
+  }
+  
+  .about-process-img{
+    max-width: 300px;
+    border-radius: 20px ;
+  }
+  
+  .about-content-image{
+    width:100%;
+    height:100px;
+  }
+  
+  .about-content h1 {
+    font-size: 17px;
+  }
+  
+  .about-description {
+    font-size: 12px;
+  }
+  
+}
+
+@media screen and (min-width:450.5px)and (max-width:650px) {
+  .about-container {
+    padding: 8px;
+  }
+  
+  .about-hero {
+    margin-bottom: 10px;
+    height: 250px;
+  }
+  
+  .about-title {
+    font-size: 22px;
+  }
+  
+  .about-subtitle {
+    font-size: 14px;
+    margin: 10px;
+  }
+  
+  .hero-image {
+    width: 100%;
+    max-height: 250px;
+  }
+  
+  .about-process-img{
+    max-width: 400px;
+    
+  }
+  .about-content{
+    max-width: 300px;
+  }
+  .about-content-image{
+    width:100%;
+    height:100px;
+  }
+  
+  .about-content h1 {
+    font-size: 20px;
+  }
+  
+  .about-description {
+    font-size: 14px;
+  }
+  
+}
+
+
+@media screen and (min-width:650.5px)and (max-width:1150px) {
+  .about-container {
+    padding: 8px;
+  }
+  
+  .about-hero {
+    margin-bottom: 10px;
+    height: 300px;
+  }
+  
+  .about-title {
+    font-size: 30px;
+  }
+  
+  .about-subtitle {
+    font-size: 18px;
+    margin: 10px;
+  }
+  
+  .hero-image {
+    width: 100%;
+    max-height: 250px;
+  }
+  
+  .about-process-img{
+    max-width: 450px;
+    
+  }
+  .about-content{
+    max-width: 250px;
+  }
+  .about-content-image{
+    width:100%;
+    height:100px;
+  }
+  
+  .about-content h1 {
+    font-size: 20px;
+  }
+  
+  .about-description {
+    font-size: 12px;
+  }
+  
 }
