--- a/src/view/Blog/Blog.css
+++ b/src/view/Blog/Blog.css
@@ -1,6 +1,6 @@
-body{
+/* body{
     background-color: rgb(175, 233, 175);
-}
+} */
 .blog-page-header{
     width: 80%;
     /* border: 5px solid green; */
