--- a/src/view/About-us/about.css
+++ b/src/view/About-us/about.css
@@ -50,30 +50,33 @@
   justify-content: center;
   margin: 10px;
   flex-wrap: wrap;
+  
 }
 
 .about-content{
   margin: 10px;
   max-width: 350px;
-  padding: 15px;
+  padding: 0;
   border-radius: 20px;
   box-shadow: 10px 5px 30px #2e7031;
   cursor: pointer; 
+  background-color: #fff;
 }
 
 .about-content-image{
   width:100%;
   height:200px;
   object-fit: cover;
-  border-radius: 10px 10px 0 0;
+  border-radius: 20px 20px 0 0;
   display: block;
-  margin: 5px auto;
+  margin: 0 auto;
 }
 
 .about-content h1 {
   font-size: 2rem;
   color: #2e7031;
   text-align: center;
+  margin-top: 5px;
 }
 
 .about-description {
@@ -82,6 +85,7 @@
   line-height: 1.2;
   margin-bottom: 20px;
   animation: slideUp 1s ease-in-out;
+  padding: 10px;
 }
 
 /* Animations */
@@ -146,7 +150,7 @@
   
   .about-content-image{
     width:100%;
-    height:100px;
+    height:150px;
   }
   
   .about-content h1 {
@@ -190,7 +194,7 @@
   
   .about-content-image{
     width:100%;
-    height:100px;
+    height:150px;
   }
   
   .about-content h1 {
@@ -236,7 +240,7 @@
   }
   .about-content-image{
     width:100%;
-    height:100px;
+    height:150px;
   }
   
   .about-content h1 {
@@ -283,7 +287,7 @@
   }
   .about-content-image{
     width:100%;
-    height:100px;
+    height:150px;
   }
   
   .about-content h1 {
