--- a/src/view/Login/login.css
+++ b/src/view/Login/login.css
@@ -2,12 +2,11 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-}
-
-body{
     font-family: 'Poppins', sans-serif;
 	overflow-y: auto;
 }
+
+
 
 
 
@@ -24,7 +23,7 @@ body{
 }
 
 
-.img{
+.login-img{
 	display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -39,7 +38,7 @@ body{
 	text-align: center;
 }
 
-.img img{
+.login-img img{
 	width: 500px;
 }
 
@@ -67,27 +66,27 @@ form{
     border-bottom: 2px solid #d9d9d9;
 }
 
-.login-content .input-div.one{
+.login-content .input-div1{
 	margin-top: 0;
 }
 
-.i{
+.login-icon{
 	color: #d9d9d9;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.i i{
+.login-icon i{
 	transition: .3s;
 }
 
-.input-div > div{
+.input-div1 > div{
     position: relative;
 	height: 45px;
 }
 
-.input-div > div > h5{
+.input-div1 > div > h5{
 	position: absolute;
 	left: 10px;
 	top: 50%;
@@ -97,7 +96,7 @@ form{
 	transition: .3s;
 }
 
-.input-div:before, .input-div:after{
+.input-div1:before, .input-div1:after{
 	content: '';
 	position: absolute;
 	bottom: -2px;
@@ -107,28 +106,28 @@ form{
 	transition: .4s;
 }
 
-.input-div:before{
+.input-div1:before{
 	right: 50%;
 }
 
-.input-div:after{
+.input-div1:after{
 	left: 50%;
 }
 
-.input-div.focus:before, .input-div.focus:after{
+.input-div1.focus:before, .input-div1.focus:after{
 	width: 50%;
 }
 
-.input-div.focus > div > h5{
+.input-div1.focus > div > h5{
 	top: -5px;
 	font-size: 15px;
 }
 
-.input-div.focus > .i > i{
+.input-div1.focus > .i > i{
 	color: #38d39f;
 }
 
-.input-div > div > input{
+.input-div1 > div > input{
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -143,24 +142,15 @@ form{
 	font-family: 'poppins', sans-serif;
 }
 
-.input-div.pass{
+.input-div2{
 	margin-bottom: 4px;
 }
 
-a{
-	display: block;
-	text-align: right;
-	text-decoration: none;
-	color: #999;
-	font-size: 0.9rem;
-	transition: .3s;
-}
 
-a:hover{
-	color: #38d39f;
-}
 
-.btn{
+
+
+.login-btn{
 	display: block;
 	width: 100%;
 	height: 50px;
@@ -177,10 +167,10 @@ a:hover{
 	cursor: pointer;
 	transition: .5s;
 }
-.btn:hover{
+.login-btn:hover{
 	background-position: right;
 }
-.signup-text {
+.login-text {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -189,24 +179,24 @@ a:hover{
     color: #999;
 }
 
-.signup-text span {
+.login-text span {
     margin-right: 5px;
 }
 
-.signup-text a {
+.login-text a {
     color: #38d39f;
     text-decoration: none;
     transition: .3s;
 }
 
-.signup-text a:hover {
+.login-text a:hover {
     text-decoration: underline;
 }
 
 
 
 @media screen and (max-width: 1050px){
-	.container{
+	.login-container{
 		grid-gap: 5rem;
 	}
 }
@@ -221,23 +211,20 @@ a:hover{
         margin: 8px 0;
 	}
 
-	.img img{
+	.login-img img{
 		width: 400px;
 	}
 }
 
 @media screen and (max-width: 900px){
-	.container{
+	.login-container{
 		grid-template-columns: 1fr;
 	}
 
-	.img{
+	.login-img{
 		display: none;
 	}
 
-	.wave{
-		display: none;
-	}
 
 	.login-content{
 		justify-content: center;
