--- a/src/components/BlogCards/SecondBlog/SecondBlog.css
+++ b/src/components/BlogCards/SecondBlog/SecondBlog.css
@@ -17,4 +17,10 @@
 }
 .second-blog-desc{
       text-align: justify;
+      margin: 5px 0px;
+}
+.read-more-btn{
+      font-size: 10px;
+      margin-left: 0px;
+      display: block;
 }
