--- a/src/components/BlogCards/BlogCard.css
+++ b/src/components/BlogCards/BlogCard.css
@@ -4,7 +4,7 @@
   border-radius: 10px;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  margin: 40px 0px;
+  margin: 30px 0px;
 }
 
 .blog-card-image{
@@ -45,4 +45,5 @@
   color: #ffff;
   border: none;
   background-color: #253e32;
+  cursor: pointer;
 }
