--- a/src/view/Blog/Blog.css
+++ b/src/view/Blog/Blog.css
@@ -6,12 +6,12 @@
     /* border: 5px solid green; */
     margin: 50px auto;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 .blog-card {
-    width: 320px;
-    height: 320px;
+    width: 340px;
+    height: 425px;
     position: relative;
     overflow: hidden;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -67,7 +67,7 @@
     /* justify-content: ; */
     gap: 30px;
     /* border: 3px solid gray; */
-    width: 60%;
+    width: 65%;
     padding-right: 10px;
 }
 
