--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -5,6 +5,7 @@
     padding: 10px 40px;
     background-color: white;
     border-bottom: 1px solid #ddd;
+    margin-top: 90px;
   }
   
   .left {
@@ -52,6 +53,7 @@
     color: #555;
     text-transform: uppercase;
     letter-spacing: 1px;
+    border-bottom: 1px solid #ddd;
   }
   
   .menu span {
