--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -1,10 +1,12 @@
-
+.header-container {
+    height: 60px;
+}
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: rgba(38, 65, 52, 1);
-    padding: 5px 10px;
+    padding: 0px 0px;
     position: fixed;
     top: 0;
     width: 100%;
@@ -22,12 +24,9 @@
 }
 
 .nav-logo img {
-    height: 70px;
-    margin-right: 10px;
-}
-
-.nav-logo a:hover {
-    color: #17252a;
+    height: 60px;
+    margin-right: 30px;
+    margin-left: 20px;
 }
 
 .nav-menu {
