--- a/src/view/Login/Signup/sign.css
+++ b/src/view/Login/Signup/sign.css
@@ -1,20 +1,19 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+*{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+	overflow-y: auto;
 }
 :root{
-    --green:#38d39f;
+    --green:#6fc5a9;
 }
-body {
-    font-family: 'Poppins', sans-serif;
-    overflow-y: auto;
-}
+
 
 .signup-container {
     width: 70vw;
     height: 95vh;
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 7rem;
     padding: 0 2rem;
@@ -23,7 +22,7 @@ body {
     margin: 100px auto;
 }
 
-.img {
+.sign-img {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -38,7 +37,7 @@ body {
     text-align: center;
 }
 
-.img img {
+.sign-img img {
     width: 500px;
 }
 
@@ -57,7 +56,7 @@ form {
     font-size: 2.9rem;
 }
 
-.signup-content .input-div {
+.signup-content .input-div1 {
     position: relative;
     display: grid;
     grid-template-columns: 7% 93%;
@@ -67,11 +66,11 @@ form {
     transition: border-bottom-color 0.3s;
 }
 
-.input-div.focus {
+.input-div1.focus {
     border-bottom-color: #38d39f; 
 }
 
-.i {
+.sign-icon {
     color: #d9d9d9;
     display: flex;
     justify-content: center;
@@ -79,16 +78,16 @@ form {
     transition: color 0.3s;
 }
 
-.i i {
+.sign-icon i {
     transition: color 0.3s;
 }
 
-.input-div > div {
+.input-div1 > div {
     position: relative;
     height: 45px;
 }
 
-.input-div > div > h5 {
+.input-div1 > div > h5 {
     position: absolute;
     left: 10px;
     top: 50%;
@@ -98,13 +97,13 @@ form {
     transition: top 0.3s, font-size 0.3s, color 0.3s;
 }
 
-.input-div.focus > div > h5 {
+.input-div1.focus > div > h5 {
     top: -5px;
     font-size: 15px;
     color: #38d39f; 
 }
 
-.input-div:before, .input-div:after {
+.input-div1:before, .input-div1:after {
     content: '';
     position: absolute;
     bottom: -2px;
@@ -114,19 +113,19 @@ form {
     transition: width 0.4s;
 }
 
-.input-div:before {
+.input-div1:before {
     right: 50%;
 }
 
-.input-div:after {
+.input-div1:after {
     left: 50%;
 }
 
-.input-div.focus:before, .input-div.focus:after {
+.input-div1.focus:before, .input-div1.focus:after {
     width: 50%;
 }
 
-.input-div > div > input {
+.input-div1 > div > input {
     position: relative;
     left: 0;
     top: 0;
@@ -142,20 +141,20 @@ form {
     transition: color 0.3s, font-weight 0.3s; 
 }
 
-.input-div > div > input:focus, .input-div > div > input:hover {
+.input-div1 > div > input:focus, .input-div1 > div > input:hover {
     
     font-weight: bold; 
 }
 
-.i i:hover {
+.sign-icon i:hover {
     color: #38d39f; 
 }
 
-.input-div.pass {
+.input-div1 {
     margin-bottom: 4px;
 }
 
-.btn {
+.signup-btn {
     display: block;
     width: 100%;
     height: 50px;
@@ -173,7 +172,7 @@ form {
     transition: background-position 0.5s;
 }
 
-.btn:hover {
+.signup-btn:hover {
     background-position: right;
 }
 
@@ -217,7 +216,7 @@ form {
         margin: 8px 0;
     }
 
-    .img img {
+    .sign-img img {
         width: 400px;
     }
 }
@@ -227,7 +226,7 @@ form {
         grid-template-columns: 1fr;
     }
 
-    .img {
+    .sign-img {
         display: none;
     }
 
