--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -1,12 +1,11 @@
 .header-container {
-    height: 60px;
+    height: 70px;
 }
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: rgba(38, 65, 52, 1);
-    padding: 0px 0px;
     position: fixed;
     top: 0;
     width: 100%;
@@ -24,9 +23,11 @@
 }
 
 .nav-logo img {
-    height: 60px;
+    height: 70px;
+    width: 250px;
     margin-right: 30px;
     margin-left: 20px;
+    object-fit: cover;
 }
 
 .nav-menu {
