some changes on blog page

--- a/src/components/BlogCards/SecondBlog/SecondBlog.css
+++ b/src/components/BlogCards/SecondBlog/SecondBlog.css
@@ -1,6 +1,12 @@
 .second-blog-container{
    display: flex;
    gap: 20px;
+   padding: 10px 0px;
+   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+   
+}
+.second-blog-container:hover{
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .second-blog-image{
       width: 130px;
