--- a/src/view/Checkout/checkout.css
+++ b/src/view/Checkout/checkout.css
@@ -38,3 +38,36 @@
     font-size: 30px;
   }
   
+form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  
+  .form-group label {
+    margin-bottom: 5px;
+    color: #333;
+  }
+  
+  .form-group input {
+    padding: 10px;
+    font-size: 16px;
+    width: 100%; 
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .form-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px; 
+    flex-wrap: wrap; 
+  }
+  
+  .form-row .form-group {
+    flex: 1; 
+    min-width: 100px;
+  }
