--- a/src/components/Frutecard/Frutecard.css
+++ b/src/components/Frutecard/Frutecard.css
@@ -1,17 +1,14 @@
-.veg-img{
+.veg-img-bg{
     height: 20vh;
     display: block;
     margin: 0px auto;
-    filter: drop-shadow(10px 10px 20px grey);
+    background-color:#e9e8e6 ;
     cursor: pointer;
-    
-     &:hover{
-        transition: all .3s linear;
-        transform: scale(1.1);
-     }
+    border-radius: 10%;
+     
     }
     
-    .veg-continer{
+    .veg-continer-bg{
         height: 250px;
         width: 200px;
         padding: 10px;
@@ -23,6 +20,10 @@
         justify-content: space-evenly;
         box-shadow: 2px 2px 10px hwb(0 31% 69%);
         
+    }
+    .frute-img{
+
+
     }
     .btn-continer{
     width: 100%;
