--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgba(38, 65, 52, 1);
+    padding: 5px 0px;
     position: fixed;
     top: 0;
     width: 100%;
@@ -23,7 +24,7 @@
 }
 
 .nav-logo img {
-    height: 70px;
+    height: 60px;
     width: 250px;
     margin-right: 30px;
     margin-left: 20px;
