--- a/src/components/card4components/card4.css
+++ b/src/components/card4components/card4.css
@@ -1,6 +1,6 @@
 .fruits-cards-container {
     display: flex;
-    justify-content: center; 
+    justify-content: space-around; 
     gap: 25px;
     margin: 100px 10px 0 10px; 
   }
@@ -14,8 +14,8 @@
     color: white;
     padding: 20px;
     width: 230px;
-    height: 450px; 
-    text-align: center;
+    height: 400px; 
+    text-align: justify;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
     position: relative;
   }
@@ -26,7 +26,7 @@
     top: 10%;
     left: 50%;
     transform: translate(-50%);
-    font-size: 24px;
+    font-size: 32px;
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
   
@@ -42,7 +42,7 @@
   .fruits-card p {
     font-size: 16px;
     line-height: 2.2;
-    text-align: center;
+    text-align: justify;
   }
 
   @media screen and (max-width: 450px) {
