--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,31 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
 .footer {
     height: auto;
-    padding: 0px 0;
+    padding:0;
     color: beige;
     width: 100%;
      font-family: "SUSE", sans-serif;
+    
 }
 
 .footer-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content:space-evenly;
     align-items: flex-start;
     background-color: #375241;
-    padding: 20px 20px 0px 20px;
+    padding: 10px;
+   
 
 }
 
 .footer-logo {
-    height: 120px;
+    height: 100px;
     padding-bottom: -40px;
 }
 
 .footer-para {
     text-align: justify;
-    width: 300px;
-    padding-left: 10px;
+    width: 250px;
+    padding-left: 32px;
     
 }
 
@@ -37,13 +39,16 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    margin-bottom: 10px; 
 }
 
 .footer-li-container{
-    margin-top: 20px;
+    margin-top: 30px;
+   
 }
 .footer-li{
     color: beige;
+    text-align: start;
 
 }
 .footer-headding {
@@ -55,24 +60,21 @@
     letter-spacing: 1px;
 }
 .footer-headding:hover {
-    color: #1f7964;
+    color: #fff;
 }
 
 .footer-img1 {
-    height: 30px;
+    height: 20px;
     position: relative;
     top: 12px;
     margin-right: 12px;
+    
 }
 
-a {
+ a {
     text-decoration: none;
-    color: rgba(0, 0, 0, 0.792);
+    color: #fff;
     font-weight: 700;
-}
-
-a:hover {
-    color: #1f7964;
 }
 
 .footer-logo-container {
@@ -84,8 +86,9 @@ a:hover {
 }
 
 .footer-img {
-    height: 30px;
-    margin: 0 10px;
+    height: 40px;
+    margin:  5px;
+   
 }
 
 .footer-copyright {
@@ -99,9 +102,9 @@ ul {
 
 .footer-links-copyright {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     height: 40px;
     background-color: #264134;
 
@@ -117,7 +120,7 @@ ul {
     
     }
     .footer-logo{
-        height: 120px;
+        height: 80px;
         display: block;
         margin: auto;
     }
