--- a/src/components/card4components/card4.css
+++ b/src/components/card4components/card4.css
@@ -27,6 +27,7 @@
     left: 50%;
     transform: translate(-50%);
     font-size: 32px;
+    color: rgba(255, 255, 255, 0.842);
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
   
