--- a/src/components/Frutecard/Frutecard.css
+++ b/src/components/Frutecard/Frutecard.css
@@ -1,9 +1,9 @@
 .App-fruit{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
 }.card-link{
     text-decoration: none;
     color: black;
@@ -12,11 +12,13 @@
 .card-body{
     display: flex;
     flex-direction: column;
-    background-color: #ddede039;
+    background-color: #ddede044;
     width: 300px;
-    height: 390px;
+    height: 350px;
     border: 1px solid black;
     border-radius: 10px;
+    position: relative;
+
 }
 .card-body-div1{
     width: 100%;
@@ -26,28 +28,43 @@
     align-items: center;
 
 }
+.fruit-card-img{
+    display: block;
+    margin: 0px auto;
+    
+
+}
 .card-body-div1 img{
-    height: 80%;
+    height: 170px;
+    padding-top: 60px;
 }
 .card-body-div2{
     width: 100%;
     height: 40%;
+    padding: 45px 0px 35px 0px;
 }
 .card-body-div2 h3{
     text-align: center;
     font-size: 29px;
 }
 .card-body-div2 p{
-    font-size: 20px;
+    font-size: 18px;
     color: black;
     margin-left: 10px;
+    position: absolute;
+    bottom: 35px;
+    left: 2px;
 
 }
 .card-body-div2 del{
-    font-size: 20px;
+    
+    font-size: 18px;
     color: rgba(0, 0, 0, 0.464);
     margin-left: 10px;
     text-decoration: line-through;
+    position: absolute;
+    bottom: 10px;
+    left: 2px;
 }
 .Buy-now-btn{
     display: flex;
@@ -62,4 +79,10 @@
     }
 .Buy-now-btn img{
     height: 20px;
+}
+.card-body .buynow-btn{
+    position: absolute;
+    bottom: 10px;
+    right: 0.5vw;
+
 }
