emoji added and hover changed

--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -55,7 +55,7 @@
 
 .nav-item a:hover {
     color: #17252a;
-    background-color: rgba(38, 65, 52, 1);
+    background-color: #fff;
     border-radius: 5px;
     transform: scale(1.1);
 }
