--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -176,7 +176,7 @@
         position: absolute;
         top: 50px;
         left: 0;
-        background-color: #333;
+        background-color: rgba(38, 65, 52, 1);
         padding: 0;
     }
 
@@ -196,7 +196,7 @@
     }
 
     .nav-item {
-        margin-left: 20px; 
+        margin-left: 40px; 
     }
 
     .nav-item a {
