--- a/src/components/BuynowButton/Buynow.css
+++ b/src/components/BuynowButton/Buynow.css
@@ -2,6 +2,7 @@
     background-color: #3f5944f3;
     color: white;
     border: none;
+    width: 100%;
     padding: 10px 30px;
     border-radius: 5px;
     font-size: 16px;
@@ -11,3 +12,4 @@
     font-size: 20px;
     
 }
+
