--- a/src/components/CartSection/CartSection.css
+++ b/src/components/CartSection/CartSection.css
@@ -1,4 +1,3 @@
-/* Top Bar Styles */
 .topbar-container {
   display: flex;
   justify-content: space-between;
@@ -13,6 +12,17 @@
   font-size: 16px;
   cursor: pointer;
 }
+.topbar-left {
+  display: flex;
+  align-items: center;
+  color: black;
+
+}
+.login-button-route{
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.621);
+  font-size: 20px;
+}
 
 .topbar-cart-icon {
   width: 24px;
@@ -24,25 +34,23 @@
   font-size: 18px;
 }
 
-/* Cart Menu Styles */
 .topbar-cart-menu {
   position: fixed;
   top: 0;
-  right: -300px; /* Initially hidden off-screen */
+  right: -300px; 
   width: 300px;
   height: 100%;
   background-color: #fff;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease-in-out; /* Smooth sliding effect */
-  transform: translateX(100%); /* Hidden by default */
+  transition: transform 0.3s ease-in-out; 
+  transform: translateX(100%); 
   z-index: 1000;
 }
 
 .topbar-cart-menu-open {
-  transform: translateX(0); /* Slides cart into view */
+  transform: translateX(0); 
 }
 
-/* Basic styling for cart content */
 .topbar-cart-menu p {
   padding: 20px;
   text-align: center;
