--- a/src/components/CartComponent/CardC.css
+++ b/src/components/CartComponent/CardC.css
@@ -23,7 +23,7 @@
 .CardC-container {
   height: 100vh;
   width: 40vw;
-  background-color: #f5f7fd;
+  background-color: rgb(242, 239, 235);
   position: relative;
   z-index: 10000;
   display: flex;
@@ -75,10 +75,12 @@
   height: 100px;
   width: 80%;
   justify-content: space-between;
-  margin: 20px 0;
-  border: 1px solid ;
+  margin: 10px 0;
+  border: 0.2px solid  rgba(0, 0, 0, 0.318);
   padding: 7px 10px;
   border-radius: 8px;
+  background-color: white;
+
 }
 
 .CardC-card-div1{
@@ -124,21 +126,21 @@ object-fit: cover;
   object-fit: cover;
 }
 .cardc-empty-container{
-  min-height: 30vh;
+  min-height: 100px;
   width: 100%;
   background-color: black;
 }
 .CardC-proceed-to-buy{
-  width: 41vw;
+  width: 40.5vw;
   height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: green;
+  background-color: white;
   position: fixed;
   bottom: 0;
   right : 0;
-  border-radius: 20px 0 0 20px;
+  border-radius: 10px 0 0 10px;
 }
 
 .CardC-proceed-to-buy-h1{
@@ -149,12 +151,9 @@ align-items: center;
 font-size: 20px;
 justify-content: space-around;
 gap:120px;
-
-padding-right: 10px;
+  padding-right: 10px;
 color: white;
-background-color: black;
-
+background-color: #3f5944;
 border-radius: 8px;
 
-  
 }
