--- a/src/components/serviceCards/ServiceCards.css
+++ b/src/components/serviceCards/ServiceCards.css
@@ -4,19 +4,36 @@
     flex-wrap: wrap;
     gap: 10px 0px;
     margin: 20px;
+    gap: 20px 0px;
 }
 
 .card {
     position: relative;
-    width: 288px;
+    width: 281px;
     height: 300px;
     overflow: hidden;
+}
+
+.card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.429); 
+    z-index: 1;
 }
 
 .card-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: transform 8s ease; 
+}
+
+.card:hover .card-image {
+    transform: scale(1.2); 
 }
 
 .card-title-container {
@@ -29,12 +46,22 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-
+    z-index: 2;
 }
 
 .card-title {
     font-size: 24px;
     font-weight: bold;
-    color: #444;
-    background-color: rgba(255, 255, 255, 0.6);
+    color: #555;
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.6); /* Initial background color */
+    transition: background-color 0.3s ease; 
+    z-index: 3;
 }
+
+.card:hover .card-title {
+    background-color: #ffffff;
+}
+
+
+
