--- a/src/view/Login/Signup/sign.css
+++ b/src/view/Login/Signup/sign.css
@@ -1,4 +1,6 @@
 
+
+
 .header-container-1 {
 	width: 840px;
 	padding: 10px 30px;
@@ -165,4 +167,126 @@ input[type="password"]:focus {
 	.login-register-section-1 p a:hover{
 	text-decoration: underline;
 	color:rgb(52, 113, 83);
+	}
+	/*media-queries*/
+	@media screen and (max-width: 600px) {
+		.header-container-1{
+			width: 240px;
+		}
+		.form-container-1{
+			width: 300px;
+			flex-direction: column;
+			border-radius:0px 0px 10px 10px; 
+			box-shadow: 2px 2px 10px rgba(38, 65, 52, 1);
+		}
+		.welcome-section-1 {
+			width: 100%;
+			border-radius:0px 0px 0px 0px;
+		}
+		.welcome-section-1 .brand-logo{
+			margin:20px auto;
+		  }
+		  .welcome-section-1 .user-img{
+			margin-right: 25%;
+		  }
+		  .form-container-1 .welcome-section-1 h2 {
+			margin-right: 25%;
+		  }
+		  
+		  .form-container-1 .welcome-section-1 p {
+			margin-right: 25%;
+		  }
+		  
+		  .input-group-1 input{
+			justify-content: space-around;
+			
+		  }.form-box-1 {
+			width: 113%;
+		  }
+		  .input-group-1 input[type="text"] {
+			width:90px;
+		  }
+		  .form-box-1 h2 {
+			font-size: 20px;
+		  }
+		  button.register-btn-1{
+			width:220px;
+			font-size: 13px;
+		  }
+		  .login-register-section-1 p{
+font-size: 13px;
+		  }
+		  .nav-link-1 {
+			font-size: 13px;
+		  }
+	}
+
+	@media screen and (min-width: 600px) and (max-width: 768px) {
+		.header-container-1{
+			width: 360px;
+		}
+		.form-container-1{
+			width: 420px;
+			flex-direction: column;
+			border-radius:0px 0px 10px 10px; 
+			box-shadow: 2px 2px 10px rgba(38, 65, 52, 1);
+		}
+		.welcome-section-1 {
+			width: 100%;
+			border-radius:0px 0px 0px 0px;
+		}
+		.welcome-section-1 .brand-logo{
+			margin:20px auto;
+			width:300px;
+		  }
+		  .welcome-section-1 .user-img{
+			margin-right: 25%;
+		  }
+		  .form-container-1 .welcome-section-1 h2 {
+			margin-right: 25%;
+		  }
+		  
+		  .form-container-1 .welcome-section-1 p {
+			margin-right: 25%;
+		  }
+		  
+		 .form-box-1 {
+			width: 113%;
+		  }
+		  .input-group-1 input[type="text"] {
+			width:130px;
+		  }
+		  .form-box-1 h2 {
+			font-size: 35px;
+		  }
+		  button.register-btn-1{
+			width:310px;
+			font-size: 18px;
+		  }
+		  .nav-link-1 {
+			font-size: 18px;
+		  }
+		  .login-register-section-1 p{
+			font-size: 15px;
+					  }
+	}
+
+	@media screen and (min-width: 769px) and (max-width: 992px) {
+		.header-container-1{
+			width: 680px;
+		}
+		.form-container-1{
+			width: 740px;
+		}
+		
+	}
+
+
+	@media screen and (min-width: 993px) and (max-width: 1200px) {
+		.header-container-1{
+			width: 800px;
+		}
+		.form-container-1{
+			width: 860px;
+		}
 	}
