--- a/src/components/Frutecard/Frutecard.css
+++ b/src/components/Frutecard/Frutecard.css
@@ -4,6 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 20px;
+    margin: 20px 0px;
 }.card-link{
     text-decoration: none;
     color: black;
