--- a/src/view/SERVICEEXPAND/fruitCardExtend/Card.css
+++ b/src/view/SERVICEEXPAND/fruitCardExtend/Card.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 100vh;
     width: 100vw;
-    margin-bottom: 20PX;
+margin: 20px 0px;    
 
 }
 
@@ -107,9 +107,13 @@
 }
 
 .card-page-rightside-div1 span {
-
+    font-size: 20px;
+}
+.card-page-rightside-div1  h3{
     font-size: 15px;
     color: rgba(0, 0, 0, 0.658);
+    margin: 5px 0px 3px 0px;
+
 }
 
 .card-page-rightside-div1 div {
@@ -121,7 +125,10 @@
 .card-page-rightside-div1 div b{
     font-size: 25px;
 }
-
+.card-page-quantity{
+    margin: 10px 0px;
+    max-width: 150px;
+}
 .card-page-rightside-div1 h6 {
     margin-left: 10px;
     font-size: 17px;
@@ -135,4 +142,5 @@ color: rgba(0, 0, 0, 0.707);
 hr {
     border: 0.5px solid rgba(0, 0, 0, 0.097);
   }
+
   
