design checkout card

--- a/src/components/Checkoutcard/Checkoutcard.css
+++ b/src/components/Checkoutcard/Checkoutcard.css
@@ -1,3 +1,22 @@
 .checkout-main-card-container{
-    
+    border: 2px solid black;
+    display: flex;
+    margin:  30px 10px;
+    justify-content: space-around;
+    padding: 10px;
+    align-items: center;
+}
+.checkboxcard-image{
+    height: 50px;
+    width: 50px;
+    background-color: aliceblue;
+    border-radius: 8px;
+    padding: 8px;
+}
+.checkout-title{
+font-size: 50px;
+}
+.checkoutcard-kg{
+    font-size: 20px;
+    text-align: center;
 }
